2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Reset messages-threaded in the open method instead of
	the close method.

	* libbalsa/mailbox.c (libbalsa_mailbox_open),
	(libbalsa_mailbox_close):

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: Do not check for getaddrinfo

	* .gitignore: don't ignore config.h.in;
	* configure.ac: do not check for getaddrinfo;
	* meson.build: ditto.

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Add a file that's needed in the autotools build to the repository

	* config.h.in:

2020-02-02  Albrecht Dreß  <albrecht.dress@arcor.de>

	Build tools: Remove test for libresolv

	* configure.ac:
	* meson.build:

2020-02-01  Albrecht Dreß  <albrecht.dress@arcor.de>

	[Patch] ical improvements

	* README, configure.ac, meson.build: require libical >= 2.0.0 instead of 3.0.0
	* libbalsa/rfc2445.c: libbalsa_vevent_reply(): add several
	optional fields to the “REPLY” message as to work around a M$
	Exchange/Outlook bug
	* src/balsa-mime-widget-vcalendar.c: balsa_vevent_widget():
	ref the VCal object containing the time zone data if we show
	the buttons for sending a reply; vevent_reply(): construct he
	reply as multipart/alternative, store it the the sentbox

2020-02-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Remove another idle handler when closing the mailbox

	* libbalsa/mailbox.c (libbalsa_mailbox_close): remove the idle
	handler for sorting the mailbox.

2020-02-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Do not sort until messages are threaded.

	* libbalsa/mailbox.c (lbm_set_threading_idle_cb): if threading
	is not complete, reschedule the handler; also drop
	lbm_check_and_sort()--it did not check, and sorting can be done
	in line.

2020-01-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Message threading cleanup

	Remove duplicate idle handler, and make
	libbalsa_mailbox_local_set_threading_info() private.
